// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell content renderers datasetLink renders correctly 1`] = `
<Link
  to="/browse/investigation/1/dataset/2/datafile"
>
  test
</Link>
`;

exports[`Cell content renderers investigationLink renders correctly 1`] = `
<Link
  to="/browse/investigation/1/dataset"
>
  test
</Link>
`;
